[gd_scene load_steps=7 format=2]

[ext_resource path="res://Sprites/Characters/BlondGuy/Sprites/guy1.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Characters/BlondGuy/Sprites/guy2.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Characters/BlondGuy/Dialogue/Interaction.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Characters/BlondGuy/BlondGuy.gd" type="Script" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 2 ) ],
"loop": true,
"name": "Idle",
"speed": 2.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 18, 25.5 )

[node name="BlondGuy" type="Area2D"]
script = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 685, 419 )
scale = Vector2( 0.0861027, 0.0861027 )
frames = SubResource( 1 )
animation = "Idle"
frame = 1
speed_scale = 0.5
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 677, 419 )
shape = SubResource( 2 )

[node name="InteractionMessage" type="Sprite" parent="."]
visible = false
position = Vector2( 684, 368 )
scale = Vector2( 0.179104, 0.179104 )
texture = ExtResource( 3 )

[connection signal="body_entered" from="." to="." method="_on_BlondGuy_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_BlondGuy_body_exited"]
